--- a/sv-SE/mail/chrome/messenger/preferences/preferences.properties
+++ b/sv-SE/mail/chrome/messenger/preferences/preferences.properties
@@ -42,3 +42,9 @@ soundFilePickerTitle=Välj ljudfil
 #### Shell Service
 alreadyDefaultClientTitle=Standardklient
 alreadyDefault=%S används redan som standardklient för e-post.
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Lägg till nyckelord
+attachmentReminderAddText=Nyckelord:
+attachmentReminderEditDialogTitle=Redigera nyckelord
+attachmentReminderEditText=Nyckelord:
