--- a/fr/mail/chrome/messenger/preferences/preferences.properties
+++ b/fr/mail/chrome/messenger/preferences/preferences.properties
@@ -42,3 +42,9 @@ soundFilePickerTitle=Choisir un son
 #### Shell Service
 alreadyDefaultClientTitle=Client par défaut
 alreadyDefault=%S est déjà votre client de courrier électronique par défaut.
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Ajouter un mot-clé
+attachmentReminderAddText=Mot-clé :
+attachmentReminderEditDialogTitle=Modifier le mot clé
+attachmentReminderEditText=Mot-clé :
