l10n for bug 296655 - selection of multiple mailboxes/folders in the folders pane is possible but not usable

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -46,6 +46,8 @@ newFolderMenuItem               = Folder…
 newSubfolderMenuItem            = Podfolder…
 newFolder                       = Nowy folder…
 newSubfolder                    = Nowy podfolder…
+markFolderRead                  = Oznacz folder jako przeczytany;Oznacz foldery jako przeczytane;Oznacz foldery jako przeczytane;
+markNewsgroupRead               = Oznacz grupę jako przeczytaną;Oznacz grupy jako przeczytane;Oznacz grupy jako przeczytane
 folderProperties                = Właściwości folderu
 newTag                          = Nowa etykieta…
 getNextNMessages                = Pobierz następne %S wiadomości
@@ -251,6 +253,7 @@ newsAcctType            = Grupy dyskusyjne
 nocachedbodytitle       = <TITLE>Aby wyświetlić tę wiadomość należy przejść do trybu online</TITLE>\n
 confirmUnsubscribeTitle = Potwierdź rezygnację z subskrypcji
 confirmUnsubscribeText  = Czy na pewno zrezygnować z subskrypcji %S?
+confirmUnsubscribeManyText = Czy na pewno zrezygnować z subskrpcji zaznaczonych grup?
 feedNoSummaryTitle      = Brak treści artykułu
 feedNoSummaryAlert      = Źródło subskrypcji jest w starym formacie, który nie zawiera treści artykułów dlatego też, nie może zostać wyświetlona.
 openLabel               = Otwórz
