l10n for bug 244455 - help prevent forgetting inclusion of attachments

--- a/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -189,3 +189,9 @@ mailnews.reply_header_originalmessage = -- Treść oryginalnej wiadomości --
 ## Strings used by the rename attachment dialog
 renameAttachmentTitle   = Zmień nazwę załącznika
 renameAttachmentMessage = Nowa nazwa:
+
+mail.compose.attachment_reminder_keywords = załącz,dołączącz,.doc,.pdf,.jpg,.zip,.mp3,cv
+attachmentReminderTitle                   = Przypomnienie o brakujących załącznikach
+attachmentReminderMsg                     = Czy ta wiadomość nie powinna zawierać załączników?
+attachmentReminderYesIForgot              = Faktycznie!
+attachmentReminderFalseAlarm              = Nie, wyślij teraz
