rm some comments

--- a/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -155,12 +155,9 @@ windowTitlePrefix  = Tworzenie:
 sendMsgTitle       = Wyślij wiadomość
 subjectDlogMessage = Nie podano tematu wysyłanej wiadomości. Wprowadź temat w pole poniżej lub wyślij bez tematu.
 
-## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage = Z tego konta można wysyłać wiadomości jedynie na adresy e-mail. Próby wysłania wiadomości na serwery grup dyskusyjnych zostaną zignorowane.
 
-# String used by the alert that tells the user an e-mail address is invalid
 addressInvalid            = %1$S nie jest poprawnym adresem e-mail. Adres e-mail powinien mieć budowę użytkownik@domena. Proszę poprawić adres przed wysłaniem wiadomości.
-## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle       = Podaj adres strony (URL)
 attachPageDlogMessage     = Adres strony, którą chcesz załączyć:
 messageAttachmentSafeName = Załączona wiadomość
@@ -171,14 +168,12 @@ SaveDialogTitle           = Zapisz wiadomość
 SaveDialogMsg             = Twoja wiadomość została zapisana do folderu %1$S w %2$S.
 CheckMsg                  = Nie pokazuj więcej tego okna dialogowego.
 
-## Strings used by prompt when Quitting while in progress
 quitComposeWindowTitle            = Wysyłanie wiadomości
-## LOCALIZATION NOTE (quitComposeWindowMessage): don't translate \n
 quitComposeWindowMessage2         = Program %1$S aktualnie wysyła wiadomość.\nNaciśnij Zaczekaj, aby zaczekać,\naż wiadomość zostanie wysłana lub Zakończ, aby zakończyć natychmiast.
 quitComposeWindowQuitButtonLabel2 = Zakończ
 quitComposeWindowWaitButtonLabel2 = Zaczekaj
 
-## Strings used by prompt for Ctrl-Enter check before sending message
+# Strings used by prompt for Ctrl-Enter check before sending message
 sendMessageCheckWindowTitle           = Wyślij wiadomość
 sendMessageCheckLabel                 = Czy na pewno ta wiadomość jest gotowa do wysłania?
 sendMessageCheckSendButtonLabel       = Wyślij
@@ -186,7 +181,6 @@ mailnews.reply_header_authorwrote     = %s pisze
 mailnews.reply_header_ondate          = W dniu %s
 mailnews.reply_header_originalmessage = -- Treść oryginalnej wiadomości --
 
-## Strings used by the rename attachment dialog
 renameAttachmentTitle   = Zmień nazwę załącznika
 renameAttachmentMessage = Nowa nazwa:
 
