--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -43,6 +43,8 @@ newFolderMenuItem=Složka…
 newSubfolderMenuItem=Podsložka…
 newFolder=Nová složka…
 newSubfolder=Nová podsložka…
+markFolderRead=Označit složku jako přečtenou;Označit složky jako přečtené;Označit složky jako přečtené
+markNewsgroupRead=Označit skupinu jako přečtenou;Označit skupiny jako přečtené;Označit skupiny jako přečtené
 folderProperties=Vlastnosti složky
 newTag=Nový štítek…
 getNextNMessages=Načíst další zprávu z diskusní skupiny %S
@@ -313,7 +315,8 @@ nocachedbodytitle=<TITLE>Pro zobrazení této zprávy přejděte do režimu onli
 
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Potvrzení zrušení odběru
-confirmUnsubscribeText=Opravdu se chcete odhlásit z odběru %S?
+confirmUnsubscribeText=Opravdu chcete zrušit odebírání %S?
+confirmUnsubscribeManyText=Opravdu chcete zrušit odebírání těchto skupin?
 feedNoSummaryTitle=Bez souhrnu kanálu
 feedNoSummaryAlert=Tento kanál novinek je ve starém formátu, který neobsahuje souhrn novinek a proto nemůže být zobrazen.
 
