--- a/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -327,3 +327,12 @@ mailnews.reply_header_originalmessage=-------- Původní zpráva --------
 ## Strings used by the rename attachment dialog
 renameAttachmentTitle=Přejmenovat přílohu
 renameAttachmentMessage=Nové jméno přilohy:
+
+## Attachment Reminder
+## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
+##   words that that should trigger an attachment reminder.
+mail.compose.attachment_reminder_keywords=příloha,přílohy,příloze,přílohu,přiloženém,připojeném,.doc,.pdf,životopis
+attachmentReminderTitle=Připomenutí přílohy
+attachmentReminderMsg=Nezapomněli jste připojit přílohu?
+attachmentReminderYesIForgot=Ano, zapomněli
+attachmentReminderFalseAlarm=Ne, odeslat
