--- a/cs/mail/chrome/messenger/preferences/preferences.properties
+++ b/cs/mail/chrome/messenger/preferences/preferences.properties
@@ -12,10 +12,6 @@ domainDuplicationError=Doména %S již v seznamu domén pro HTML nebo prostý te
 confirmResetJunkTrainingTitle=Potvrzení
 confirmResetJunkTrainingText=Jste si jisti, že chcete vymazat všechna naučená pravidla pro rozpoznávání nevyžádané pošty?
 
-#### Master Password
-setMasterPassword=Nastavit hlavní heslo
-changeMasterPassword=Změnit hlavní heslo
-
 #### Downloads
 desktopFolderName=Pracovní plocha
 myDownloadsFolderName=Moje stažené soubory
@@ -47,3 +43,9 @@ soundFilePickerTitle=Vyberte zvuk
 #### Shell Service
 alreadyDefaultClientTitle=Výchozí program
 alreadyDefault=Aplikace %S je již nastavena jako výchozí poštovní program.
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Přidání klíčového slova
+attachmentReminderAddText=Slovo:
+attachmentReminderEditDialogTitle=Úprava klíčového slova
+attachmentReminderEditText=Slovo:
