Aviary.pl bug 2475 - typo in confirmUnsubscribeManyText@messenger.properties

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -253,7 +253,7 @@ newsAcctType            = Grupy dyskusyjne
 nocachedbodytitle       = <TITLE>Aby wyświetlić tę wiadomość należy przejść do trybu online</TITLE>\n
 confirmUnsubscribeTitle = Potwierdź rezygnację z subskrypcji
 confirmUnsubscribeText  = Czy na pewno zrezygnować z subskrypcji %S?
-confirmUnsubscribeManyText = Czy na pewno zrezygnować z subskrpcji zaznaczonych grup?
+confirmUnsubscribeManyText = Czy na pewno zrezygnować z subskrypcji zaznaczonych grup?
 feedNoSummaryTitle      = Brak treści artykułu
 feedNoSummaryAlert      = Źródło subskrypcji jest w starym formacie, który nie zawiera treści artykułów dlatego też, nie może zostać wyświetlona.
 openLabel               = Otwórz
