--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -255,7 +255,7 @@ confirmUnsubscribeTitle = Potwierdź rezygnację z subskrypcji
 confirmUnsubscribeText  = Czy na pewno zrezygnować z subskrypcji %S?
 confirmUnsubscribeManyText = Czy na pewno zrezygnować z subskrypcji zaznaczonych grup?
 feedNoSummaryTitle      = Brak treści artykułu
-feedNoSummaryAlert      = Źródło subskrypcji jest w starym formacie, który nie zawiera treści artykułów dlatego też, nie może zostać wyświetlona.
+feedNoSummaryAlert      = Źródło subskrypcji jest w formacie starego typu, który nie zawiera treści artykułów, dlatego też ich treść nie może zostać wyświetlona.
 openLabel               = Otwórz
 openLabelAccesskey      = O
 saveLabel               = Zapisz jako…
