l10n for bug 338753 (Aviary.pl bug 1148) - don't confuse Sender:-header with From: in quick search, thread columns

--- a/pl/mail/chrome/messenger/mime.properties
+++ b/pl/mail/chrome/messenger/mime.properties
@@ -46,7 +46,7 @@
 1005=Odesłano-Do
 1006=Odesłano-Kopia
 1007=Data
-1008=Nadawca
+1008=Wysyłane przez
 1009=Nadawca
 1010=Odpowiedź-Do
 1011=Firma/Organizacja
