--- a/pl/mail/chrome/messenger/mimeheader.properties
+++ b/pl/mail/chrome/messenger/mimeheader.properties
@@ -22,6 +22,7 @@
 #    Marek Wawoczny <gmbh@mozillapl.org> (Polish translation)
 #    Piotr Bartecki <pbartecki@mozillapl.org> (Polish translation)
 #    Piotr Komoda <gorky@civ.pl> (Polish translation)
+#    Stefan Plewako <splewako@aviary.pl> (Polish translation)
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -62,7 +63,7 @@ RESENT-MESSAGE-ID = Identyfikator wiadomości odesłanej
 RESENT-SENDER     = Odesłano-Nadawca
 RESENT-TO         = Odesłano-Do
 RESENT-CC         = Odesłano-Kopia
-SENDER            = Nadawca
+SENDER            = Wysyłane przez
 SUBJECT           = Temat
 APPROVED-BY       = Zatwierdzony przez
 USER-AGENT        = Program pocztowy
