sync mobile with trunk

--- a/pl/mobile/chrome/browser.properties
+++ b/pl/mobile/chrome/browser.properties
@@ -2,6 +2,37 @@
 editBookmarkAddFolder=Dodaj nowy folder
 editBookmarkNewFolder=Nowy folder
 
+# Add-on Manager
+addonsRestart=Uruchom ponownie, by dokończyć instalację
+addonsRestartButton.label=Uruchom ponownie
+addonsLocalNone.label=Brak zainstalowanych dodatków
+addonsSearchStart.label=Trwa szukanie dodatków...
+addonsSearchStart.button=Anuluj
+addonsSearchNone.label=Brak wyników
+addonsSearchNone.button=OK
+addonsSearchFail.label=%S nie mógł pobrać dodatków
+addonsSearchFail.button=OK
+
+# Download Manager
+# LOCALIZATION NOTE (Status): — is the "em dash" (long dash)
+# #1 download size for FINISHED or download state; #2 host (e.g., eTLD + 1, IP)
+downloadsStatus=#1 — #2
+downloadsUnknownSize=Nieznany rozmiar
+# LOCALIZATION NOTE (KnownSize): #1 size number; #2 size unit
+downloadsKnownSize=#1 #2
+donwloadsYesterday=Wczoraj
+# LOCALIZATION NOTE (MonthDate): #1 month name; #2 date number; e.g., January 22
+downloadsMonthDate=#2 #1
+
+# Alerts
+alertAddons=Dodatki
+alertAddonsStart=Instalacja dodatków
+alertAddonsDone=Instalacja zakończona
+alertAddonsFail=Instalacja zakończona niepowodzeniem
+alertDownloads=Pobieranie plików
+alertDownloadsStart=Pobieranie: %S
+alertDownloadsDone=%S zakończył pobieranie plików
+
 # Popup Blocker
 popupWarning=Program %S nie pozwolił tej witrynie na otwieranie wyskakujących okien.
 popupWarningMultiple=Program %S nie pozwolił tej witrynie na otwarcie %S wyskakujących okien.
