--- a/pl/mobile/chrome/region.properties
+++ b/pl/mobile/chrome/region.properties
@@ -3,13 +3,14 @@ browser.search.defaultenginename=Google
 
 # Search engine order (order displayed in the search bar dropdown)s
 browser.search.order.1=Google
+browser.search.order.2=Yahoo
 
 # This is the default set of web based feed handlers shown in the reader
 # selection UI
 browser.contentHandlers.types.0.title=Startowy.com
 browser.contentHandlers.types.0.uri=http://www.startowy.com/dodajrss.html?zrodlo=%s
-browser.contentHandlers.types.1.title=Netvibes
-browser.contentHandlers.types.1.uri=http://www.netvibes.com/subscribe.php?url=%s  
+browser.contentHandlers.types.1.title=My Yahoo
+browser.contentHandlers.types.1.uri=http://add.my.yahoo.com/rss?url=%s
 browser.contentHandlers.types.2.title=Google
 browser.contentHandlers.types.2.uri=http://fusion.google.com/add?feedurl=%s
 
