Small corrections for the attachment reminder

--- a/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -331,7 +331,7 @@ renameAttachmentMessage=Nouveau nom de la pièce jointe :
 ## Attachment Reminder
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
-mail.compose.attachment_reminder_keywords=pièce jointe,point,.doc,.pdf,CV,lettre explicative
+mail.compose.attachment_reminder_keywords=pièce jointe,joint,.doc,.pdf,CV,lettre explicative,attaché
 attachmentReminderTitle=Rappel pour les pièces jointes
 attachmentReminderMsg=Avez-vous oublié de joindre un fichier ?
 attachmentReminderYesIForgot=Oui
