--- a/fr/mail/chrome/messenger/activity.properties
+++ b/fr/mail/chrome/messenger/activity.properties
@@ -56,3 +56,24 @@ movedFolder=Dossier #1 déplacé dans le dossier #2
 copiedFolder=Dossier #1 copié dans le dossier #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
 renamedFolder=Dossier #1 renommé en #2
+indexing=Indexation des messages
+# LOCALIZATION NOTE (indexingFolder): #1 is a folder name
+indexingFolder=Indexation des messages dans #1
+indexingStatusVague=Choix des messages à indexer
+# LOCALIZATION NOTE (indexingFolderStatusVague): #1 is a folder name
+indexingFolderStatusVague=Choix des messages à indexer dans #1
+# LOCALIZATION NOTE (indexingStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+indexingStatusExact=Indexing #1 of #2 message;Indexing #1 of #2 messages (#3% complete)
+# LOCALIZATION NOTE (indexingFolderStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+#   #4 is a folder name
+indexingFolderStatusExact=Indexation du message #1 sur #2 dans #4;Indexation du message #1 sur #2 dans #4 (#3% effectués)
+# LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
+indexedFolder=Indexation d'un message dans #2;Indexation de #1 messages dans #2
+# LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
+indexedFolderStatus=#1 seconde écoulée;#1 secondes écoulées
