--- a/pl/mail/chrome/messenger/activity.properties
+++ b/pl/mail/chrome/messenger/activity.properties
@@ -33,3 +33,12 @@ deletedFolder      = Usunięto folder #1
 movedFolder        = Przeniesiono folder #1 do #2
 copiedFolder       = Skopiowano folder #1 do #2
 renamedFolder      = Zmieniono nazwę folderu #1 na #2
+
+indexing                  = Indeksowanie wiadomości
+indexingFolder            = Indeksowanie wiadomości w folderze #1
+indexingStatusVague       = Analizowanie, które wiadomości powinny zostać zindeksowane
+indexingFolderStatusVague = Analizowanie, które wiadomości powinny zostać zindeksowane w folderze #1
+indexingStatusExact       = Indeksowanie #1 z #2 wiadomości;Indeksowanie #1 z #2 wiadomości;Indeksowanie #1 z #2 wiadomości (#3%)
+indexingFolderStatusExact = Indeksowanie #1 z #2 wiadomości w folderze #4;Indeksowanie #1 z #2 wiadomości w folderze #4;Indeksowanie #1 z #2 wiadomości w folderze #4 (#3%)
+indexedFolder             = Zindeksowano #1 wiadomość w folderze #2;Zindeksowano #1 wiadomości w folderze #2;Zindeksowano #1 wiadomości w folderze #2
+indexedFolderStatus       = Pozostała #1 sekunda;Pozostały #2 sekundy;Pozostało #2 sekund
