bug 469051: show Gloda indexing progress and results in the Activity Manager window

--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -61,7 +61,7 @@ defaultSaveMessageAsFileName=nachricht.eml
 SaveMailAs=Nachricht speichern unter
 SaveAttachment=Anhang speichern
 SaveAllAttachments=Alle Anhänge speichern
-LoadingMessageToPrint=Lade Nachricht zum Drucken…
+LoadingMessageToPrint=Nachricht zum Drucken laden…
 MessageLoaded=Nachricht geladen…
 PrintingMessage=Drucke Nachricht…
 PrintPreviewMessage=Druckvorschau: Nachricht…
@@ -71,8 +71,8 @@ PrintingAddrBook=Adressbuch drucken…
 PrintPreviewAddrBook=Druckvorschau: Adressbuch…
 PrintingComplete=Abgeschlossen.
 PreviewTitle=%S - %S
-LoadingMailMsgForPrint=(Lade Inhalte für das Drucken)
-LoadingMailMsgForPrintPreview=(Lade Inhalte für Druckvorschau)
+LoadingMailMsgForPrint=(Inhalte für das Drucken laden)
+LoadingMailMsgForPrintPreview=(Inhalte für Druckvorschau laden)
 saveAttachmentFailed=Kann Anhang nicht speichern. Bitte überprüfen Sie den Dateinamen und versuchen Sie es später nochmal.
 saveMessageFailed=Kann Nachricht nicht speichern. Bitte überprüfen Sie den Dateinamen und versuchen Sie es später nochmal.
 fileExists=%S existiert bereits. Soll die Datei überschrieben werden?
@@ -152,7 +152,7 @@ linesColumnHeader=Zeilen
 # status feedback stuff
 documentDone=
 
-documentLoading=Lade Nachricht…
+documentLoading=Nachricht laden…
 
 # LOCALIZATION NOTE (autosyncProgress): Do not translate the word "%1$S" or "%2$S" below.
 # Place the word %1$S in your translation where the name of the comma separated folders should appear.
