--- a/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -44,22 +44,22 @@
 12501=Temporäre Datei %P0% konnte nicht geöffnet werden. Überprüfen Sie Ihre Einstellung für "Temporärer Ordner".
 
 ## @name NS_MSG_UNABLE_TO_SAVE_TEMPLATE
-12502=Konnte Ihre Nachricht nicht als Vorlage speichern.
+12502=Ihre Nachricht konnte nicht als Vorlage gespeichert werden.
 
 ## @name NS_MSG_UNABLE_TO_SAVE_DRAFT
-12503=Konnte Ihre Nachricht nicht als Entwurf speichern.
+12503=Ihre Nachricht konnte nicht als Entwurf gespeichert werden.
 
 ## @name NS_MSG_LOAD_ATTACHMNTS
-12504=Lade Anhänge…
+12504=Anhänge laden…
 
 ## @name NS_MSG_LOAD_ATTACHMNT
-12505=Lade Anhang…
+12505=Anhang laden…
 
 ## @name NS_MSG_COULDNT_OPEN_FCC_FOLDER
-12506=Konnte Ordner für gesendete Nachrichten nicht öffnen. Bitte überprüfen Sie Ihre Konten-Einstellungen.
+12506=Ordner für gesendete Nachrichten konnte nicht geöffnet werden. Bitte überprüfen Sie Ihre Konten-Einstellungen.
 
 ## @name NS_MSG_CANT_POST_TO_MULTIPLE_NEWS_HOSTS
-12507=Kann nicht an mehrere News-Server senden. Wiederholen Sie den Vorgang.
+12507=Es konnte nicht an mehrere News-Server gesendet werden. Wiederholen Sie den Vorgang.
 
 ## @name NS_MSG_ASSEMB_DONE_MSG
 12508=Zusammenstellen der Nachricht…Fertig
@@ -95,10 +95,10 @@
 12520=Senden der Nachricht fehlgeschlagen.
 
 ## @name SMTP_DELIV_MAIL
-12521=Sende Nachricht(en)…
+12521=Nachricht(en) senden…
 
 ## @name SMTP_MESSAGE_SENT_WAITING_MAIL_REPLY
-12522=Nachricht gesendet; warte auf Antwort…
+12522=Nachricht gesendet; auf Antwort warten…
 
 ## @name SMTP_PROGRESS_MAILSENT
 12523=Nachricht erfolgreich gesendet
@@ -107,7 +107,7 @@
 12524=Fehler beim Senden der Nachricht: SMTP-Server-Fehler. Der Mail-Server antwortete: %s. Kontaktieren Sie Ihren Mail-Administrator für Unterstützung.
 
 ## @name NS_MSG_UNABLE_TO_SEND_LATER
-12525=Konnte Nachricht nicht speichern, um sie später zu senden.
+12525=Nachricht konnte nicht gespeichert werden, um sie später zu senden.
 
 ## @name NS_ERROR_COMMUNICATIONS_ERROR
 12526=Kommunikationsfehler aufgetreten: %d. Bitte wiederholen Sie den Vorgang.
@@ -137,13 +137,13 @@
 12535=Anhängen der Datei %s…
 
 ## @name NS_MSG_CREATING_MESSAGE
-12536=Erstelle Nachricht…
+12536=Nachricht wird erstellt…
 
 ## @name NS_MSG_FAILURE_ON_OBJ_EMBED_WHILE_SENDING
 12537=Ein Problem ist beim Anhängen der Datei %.200s an die Nachricht aufgetreten. Wollen Sie das Senden der Nachricht ohne die Datei fortsetzen?
 
 ## @name NS_MSG_START_COPY_MESSAGE
-12538=Kopiere Nachricht in Ordner %S…
+12538=Nachricht in Ordner %S kopieren…
 
 ## @name NS_MSG_START_COPY_MESSAGE_COMPLETE
 12539=Kopieren abgeschlossen
@@ -194,7 +194,7 @@
 12561=Wollen Sie zum Verfassen-Fenster zurückkehren?
 
 ## @name NS_MSG_GENERIC_FAILURE_EXPLANATION
-12562=Bitte überprüfen Sie Ihre Konten-Einstellungen und wiederholen Sie den Vorgang.
+12562=Bitte überprüfen Sie Ihre Konten-Einstellungen, und wiederholen Sie den Vorgang.
 
 ## @name NS_MSG_ERROR_READING_FILE
 12563=Fehler beim Lesen der Datei.
@@ -331,7 +331,7 @@ renameAttachmentMessage=Neuer Name des Anhangs:
 ## Attachment Reminder
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
-mail.compose.attachment_reminder_keywords=Anhang,Anhänge,angehängt,anbei,.doc,.pdf,Wiedervorlage,Begleitbrief,Begleitschreiben,Datei,Dateien,Bild,Bilder,Foto,Fotos,Dokument,Dokumente
+mail.compose.attachment_reminder_keywords=Anhang,angehängt,.doc,.pdf,Wiedervorlage,Begleitschreiben
 attachmentReminderTitle=Anhang-Erinnerung
 attachmentReminderMsg=Haben Sie vergessen einen Anhang anzufügen?
 attachmentReminderYesIForgot=Ja, habe ich!
