various pl l10n updates in one commit; since hg broke as it usually does and I don't feel like doing all the commits once again from scratch

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -205,3 +205,8 @@ privateBrowsingMessage=%S zapamięta aktualnie otwarte karty, aby otworzyć je p
 privateBrowsingYesTitle=&Przejdź do trybu prywatnego
 privateBrowsingNoTitle=&Anuluj
 privateBrowsingNeverAsk=&Nie wyświetlaj ponownie tego komunikatu
+
+# LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
+# Used as the bookmark name when saving a keyword for a search field.
+addKeywordTitleAutoFill=Szukaj na stronie %S
+
