--- a/pl/dom/chrome/plugins.properties
+++ b/pl/dom/chrome/plugins.properties
@@ -7,7 +7,7 @@ installedplugins_label=Zainstalowane wtyczki
 nopluginsareinstalled_label=Brak zainstalowanych wtyczek
 findmore_label=Więcej informacji o wtyczkach znajdziesz na
 installhelp_label=Pomoc dotycząca instalacji wtyczek jest dostępna na
-filename_label=Nazwa pliku:
+file_label=Plik:
 version_label=Wersja:
 mimetype_label=Typ MIME
 description_label=Opis
