Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/importMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/importMsgs.properties
@@ -289,7 +289,7 @@ ImportAlreadyInProgress=En import-prosess foregår allerede. Prøv igjen når de
 #Error strings for settings import
 ImportSettingsBadModule=Klarte ikke laste inn innstillinger-modulen
 ImportSettingsNotFound=Klarte ikke finne innstillinger. Kontroller at programmet er installert på denne maskinen.
-ImportSettingsFailed=En feil oppstod under import av innstillinger. Noen, eller alle, av instillingene har ikke blitt importert.
+ImportSettingsFailed=En feil oppstod under import av innstillinger. Noen, eller alle, av innstillingene har ikke blitt importert.
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
 ImportSettingsSuccess=Innstillinger importert fra %S
 
