--- a/fi/mail/chrome/messenger/preferences/preferences.properties
+++ b/fi/mail/chrome/messenger/preferences/preferences.properties
@@ -42,3 +42,9 @@ soundFilePickerTitle=Valitse äänimerkki
 #### Shell Service
 alreadyDefaultClientTitle=Oletusohjelma
 alreadyDefault=%S on jo asetettu oletussähköpostiohjelmaksi.
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Lisää avainsana
+attachmentReminderAddText=Avainsana:
+attachmentReminderEditDialogTitle=Muokkaa avainsanaa
+attachmentReminderEditText=Avainsana:
