--- a/fi/mail/chrome/messenger/search-attributes.properties
+++ b/fi/mail/chrome/messenger/search-attributes.properties
@@ -1,57 +1,40 @@
 #these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
-0=Aihe
-1=Lähettäjä
-2=Viestin runko
-3=Päiväys
-4=Tärkeysaste
-5=Tila
-6=Vastaanottaja
-7=Kopio
-8=Vastaanottaja tai kopio
-# 9 not visible
-9=Sijainti
-# 10 not visible
-10=Viestin avain
-11=Ikä päivissä
-# 12 not visible
-12=Kansion tiedot:
-13=Koko
-# 14 not visible
-14=Mikä tahansa teksti
-15=Tunnukset
+#and nsMsgSearchAttribMap in nsMsgSearchAdapter.cpp
+Subject=Aihe
+From=Lähettäjä
+Body=Viestin runko
+Date=Päiväys
+Priority=Tärkeysaste
+Status=Tila
+To=Vastaanottaja
+Cc=Kopio
+ToOrCc=Vastaanottaja tai kopio
+AgeInDays=Ikä päivissä
+SizeKB=Koko (kt)
+Tags=Tunnukset
 # for AB and LDAP
-16=Mikä tahansa nimi
-17=Näytettävä nimi
-18=Lempinimi
-19=Näyttönimi
-20=Sähköposti
-21=Toinen sähköpostiosoite
-22=Mikä tahansa numero
-23=Työpuhelin
-24=Kotipuhelin
-25=Faksi
-26=Hakulaite
-27=Matkapuhelin
-28=Kaupunki
-29=Katu
-30=Ammattinimi
-31=Organisaatio
-32=Osasto
-33=reserved for AB
-34=reserved for AB
-35=reserved for AB
-36=reserved for AB
-37=reserved for AB
-38=reserved for AB
-39=reserved for AB
-40=reserved for AB
-41=reserved for AB
-42=reserved for AB
-43=Lähettäjä, vastaanottaja ja kopio tai piilokopio-osoite
-44=Roskapostiluku alkuperäinen
-45=Roskapostiprosentti
-46=Liitteen tila
-47=Roskapostitila
-48=Tunnus
-49=Muokkaa…
-# don't use above 49
+AnyName=Mikä tahansa nimi
+DisplayName=Näytettävä nimi
+Nickname=Lempinimi
+ScreenName=Näyttönimi
+Email=Sähköposti
+AdditionalEmail=Toinen sähköpostiosoite
+AnyNumber=Mikä tahansa numero
+WorkPhone=Työpuhelin
+HomePhone=Kotipuhelin
+Fax=Faksi
+Pager=Hakulaite
+Mobile=Matkapuhelin
+City=Kaupunki
+Street=Katu
+Title=Ammattinimi
+Organization=Organisaatio
+Department=Osasto
+# more mailnews
+FromToCcOrBcc=Lähettäjä, vastaanottaja ja kopio tai piilokopio-osoite
+JunkScoreOrigin=Roskapostiluku alkuperäinen
+JunkPercent=Roskapostiprosentti
+AttachmentStatus=Liitteen tila
+JunkStatus=Roskapostitila
+Label=Tunnus
+Customize=Muokkaa…
