ff: geolocation strings, video controls; tb: activity indexing; some small others

--- a/fi/mail/chrome/messenger/activity.properties
+++ b/fi/mail/chrome/messenger/activity.properties
@@ -56,3 +56,24 @@ movedFolder=Siirrettiin kansio #1 kansioon #2
 copiedFolder=Kopioitiin kansio #1 kansioon #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
 renamedFolder=Kansio #1 nimettiin uudelleen kansioksi #2
+indexing=Luodaan hakemistoa viesteistä
+# LOCALIZATION NOTE (indexingFolder): #1 is a folder name
+indexingFolder=Luodaan hakemistoa kansion #1 viesteistä
+indexingStatusVague=Valitaan viestejä, joista luodaan hakemisto
+# LOCALIZATION NOTE (indexingFolderStatusVague): #1 is a folder name
+indexingFolderStatusVague=Valitaan kansiosta #1 viestejä, joista luodaan hakemisto
+# LOCALIZATION NOTE (indexingStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+indexingStatusExact=Luodaan hakemistoa #1 / #2 viestistä;Luodaan hakemistoa #1 / #2 viestistä (#3% valmis)
+# LOCALIZATION NOTE (indexingFolderStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+#   #4 is a folder name
+indexingFolderStatusExact=Luodaan hakemistoa kansion #4 #1 / #2 viestistä;Luodaan hakemistoa kansion #4 #1 / #2 viestistä (#3% valmis)
+# LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
+indexedFolder=Luotiin hakemisto #1 viestistä kansiossa #2;Luotiin hakemisto #1 viestistä kansiossa #2
+# LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
+indexedFolderStatus=Kulutettiin #1 sekunti;Kulutettiin #1 sekuntia
