Aviary.pl bug 2223 - Remove personal pronouns; r=marcoos

--- a/pl/dom/chrome/security/caps.properties
+++ b/pl/dom/chrome/security/caps.properties
@@ -18,14 +18,14 @@
 # Contributor(s):
 # Mitch Stoltz <mstoltz@netscape.com>
 # Christopher A. Aillon <christopher@aillon.com>
-# Marek Stepien <marcoos@aviary.pl> (Polish l10n)
+# Marek Stepien <marcoos@aviary.pl> (Polish localization)
 #
 
 Yes=Zezwól
 No=Zabroń
 Titleline=Zabezpieczenia internetowe
 CheckMessage=Zapamiętaj tę decyzję
-EnableCapabilityQuery=Skrypt z "%S" zażądał rozszerzonych i niebezpiecznych dla Twojego komputera i danych uprawnień:\n\n%S\n\nUdziel żądanych uprawnień tylko w przypadku, gdy jesteś pewien, że to źródło jest wolne od wirusów i innych niebezpieczeństw.
+EnableCapabilityQuery=Skrypt z "%S" zażądał rozszerzonych i niebezpiecznych dla komputera użytkownika i danych uprawnień:\n\n%S\n\nUdziel żądanych uprawnień tylko w przypadku, gdy jesteś pewien, że to źródło jest wolne od wirusów i innych niebezpieczeństw.
 
 # LOCALIZATION NOTE: Due to bug 315288, use only Western European characters in: 
 # EnableCapabilityDenied, GetPropertyDenied, SetPropertyDenied, CallMethodDenied 
