--- a/pl/security/manager/chrome/pipnss/pipnss.properties
+++ b/pl/security/manager/chrome/pipnss/pipnss.properties
@@ -21,10 +21,10 @@
 #    Brian Ryner <bryner@brianryner.com>
 #    Terry Hayes <thayes@netscape.com> 
 #    John Gardiner Myers <jgmyers@speakeasy.net>
-#    Marek Wawoczny <gmbh@mozillapl.org> (Polish translation)
-#    Piotr Bartecki <pbartecki@mozillapl.org> (Polish translation)
-#    Piotr Komoda <gorky@civ.pl> (Polish translation)
-#    Marek Stepien <marcoos@aviary.pl> (Polish translation)
+#    Marek Wawoczny <gmbh@mozillapl.org> (Polish localization)
+#    Piotr Bartecki <pbartecki@mozillapl.org> (Polish localization)
+#    Piotr Komoda <gorky@civ.pl> (Polish localization)
+#    Marek Stepien <marcoos@aviary.pl> (Polish localization)
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -358,7 +358,7 @@ VerifyIssuerNotTrusted=<Wystawcy certyfikatu nie ma na liście zaufanych wystawc
 VerifyIssuerUnknown=<Nieznany wydawca>
 VerifyInvalidCA=<Nieważny CA>
 VerifyUnknown=<Nieznany>
-CertUser=Twój certyfikat
+CertUser=Certyfikat użytkownika
 CertCA=CA (ośrodek certyfikacji)
 CertSSL=Serwer SSL
 # ang: CertEmail = Peer S/MIME
