--- a/pl/security/manager/chrome/pippki/pippki.properties
+++ b/pl/security/manager/chrome/pippki/pippki.properties
@@ -20,10 +20,10 @@
 # Rights Reserved.
 #
 # Contributor(s): 
-#    Marek Wawoczny <gmbh@mozillapl.org> (Polish translation)
-#    Piotr Bartecki <pbartecki@mozillapl.org> (Polish translation)
-#    Piotr Komoda <gorky@civ.pl> (Polish translation)
-#    Marek Stepien <marcoos@aviary.pl> (Polish translation)
+#    Marek Wawoczny <gmbh@mozillapl.org> (Polish localization)
+#    Piotr Bartecki <pbartecki@mozillapl.org> (Polish localization)
+#    Piotr Komoda <gorky@civ.pl> (Polish localization)
+#    Marek Stepien <marcoos@aviary.pl> (Polish localization)
 # 
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -64,7 +64,7 @@ deleteSslCertImpact3=Jeżeli wyjątek dotyczący certyfikatu serwera zostanie us
 deleteSslCertTitle3=Usuń wyjątek dotyczący certyfikatu serwera
 
 deleteUserCertConfirm=Czy na pewno usunąć wybrane certyfikaty?
-deleteUserCertImpact=Jeżeli usuniesz jeden ze swoich własnych certyfikatów, to ponowne wykorzystanie go do potwierdzenia twojej tożsamości będzie niemożliwe.
+deleteUserCertImpact=Usunięcie jednego z certyfikatów użytkownika, spowoduje, że ponowne wykorzystanie go do potwierdzenia tożsamości użytkownika będzie niemożliwe.
 deleteUserCertTitle=Usuń własne certyfikaty
 
 deleteCaCertConfirm=Czy na pewno usunąć wybrane certyfikaty CA?
