--- a/pl/dom/chrome/layout/printing.properties
+++ b/pl/dom/chrome/layout/printing.properties
@@ -20,10 +20,10 @@
 #
 # Contributor(s):
 #   Roland Mainz <roland.mainz@informatik.med.uni-giessen.de>
-#   Zbigniew Braniecki <gandalf@aviary.pl> (Polish l10n)
-#   Marek Stepien <marcoos@aviary.pl> (Polish l10n)
-#   Piotr Bartecki <pbartecki@mozillapl.org> (Polish l10n)
-#   Marek Wawoczny <GmbH@mozillapl.org> (Polish l10n)
+#   Zbigniew Braniecki <gandalf@aviary.pl> (Polish localization)
+#   Marek Stepien <marcoos@aviary.pl> (Polish localization)
+#   Piotr Bartecki <pbartecki@mozillapl.org> (Polish localization)
+#   Marek Wawoczny <GmbH@mozillapl.org> (Polish localization)
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either of the GNU General Public License Version 2 or later (the "GPL"),
@@ -69,9 +69,9 @@ NS_ERROR_GFX_PRINTER_ENDDOC=Drukowanie nie powiodło się podczas kończenia dok
 NS_ERROR_GFX_PRINTER_STARTPAGE=Drukowanie nie powiodło się podczas uruchamiania strony.
 NS_ERROR_GFX_PRINTER_ENDPAGE=Drukowanie nie powiodło się podczas kończenia strony.
 NS_ERROR_GFX_PRINTER_PRINT_WHILE_PREVIEW=Nie można rozpocząć drukowania podczas wyświetlania podglądu wydruku.
-NS_ERROR_GFX_PRINTER_PAPER_SIZE_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ rozmiar papieru, który został określony, nie jest obsługiwany przez Twoją drukarkę.
-NS_ERROR_GFX_PRINTER_ORIENTATION_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ orientacja papieru, która została określona, nie jest obsługiwana przez Twoją drukarkę.
-NS_ERROR_GFX_PRINTER_COLORSPACE_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ zadanie drukowania wymaga możliwości druku w kolorze, których Twoja drukarka nie obsługuje.
+NS_ERROR_GFX_PRINTER_PAPER_SIZE_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ rozmiar papieru, który został określony, nie jest obsługiwany przez drukarkę użytkownika.
+NS_ERROR_GFX_PRINTER_ORIENTATION_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ orientacja papieru, która została określona, nie jest obsługiwana przez drukarkę użytkownika.
+NS_ERROR_GFX_PRINTER_COLORSPACE_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ zadanie drukowania wymaga możliwości druku w kolorze, których drukarka użytkownika nie obsługuje.
 NS_ERROR_GFX_PRINTER_TOO_MANY_COPIES=Wystąpił błąd podczas drukowania, ponieważ zażądano zbyt wielu kopii.
 NS_ERROR_GFX_PRINTER_DRIVER_CONFIGURATION_ERROR=Wystąpił błąd podczas drukowania. Sterownik drukarni nie jest poprawnie skonfigurowany.
 NS_ERROR_GFX_PRINTER_DOC_IS_BUSY_PP=W chwili obecnej wyświetlenie podglądu strony jest niemożliwe.\nPo wczytaniu strony w całości należy spróbować ponownie.
@@ -79,10 +79,10 @@ NS_ERROR_GFX_PRINTER_DOC_WAS_DESTORYED=Strona została zamieniona, podczas gdy p
 NS_ERROR_GFX_NO_PRINTDIALOG_IN_TOOLKIT=Moduł dynamicznych okien nie został prawidłowo zainstalowany\nlub ta wersja zestawu narzędzi GFX nie obsługuje już systemowych okien drukowania
 NS_ERROR_GFX_NO_PRINTROMPTSERVICE=Brak dostępu do linii komend drukowania.
 NS_ERROR_GFX_PRINTER_NO_XUL=Nie można wydrukować ani otworzyć podglądu wydruku tej strony.
-NS_ERROR_GFX_PRINTER_PLEX_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ wybrany tryb drukowania nie jest obsługiwany przez Twoją drukarkę.
+NS_ERROR_GFX_PRINTER_PLEX_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ wybrany tryb drukowania nie jest obsługiwany przez drukarkę użytkownika.
 NS_ERROR_GFX_PRINTER_DOC_IS_BUSY=Nie można drukować dokumentu, podczas gdy jest on wczytywany.
 NS_ERROR_GFX_PRINTING_NOT_IMPLEMENTED=Drukowanie nie jest zaimplementowane.
 NS_ERROR_GFX_COULD_NOT_LOAD_PRINT_MODULE=Oczekiwany moduł drukowania nie może zostać załadowany.
-NS_ERROR_GFX_PRINTER_RESOLUTION_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ wybrana rozdzielczość/jakość nie jest obsługiwana przez Twoją drukarkę.
+NS_ERROR_GFX_PRINTER_RESOLUTION_NOT_SUPPORTED=Wystąpił błąd podczas drukowania, ponieważ wybrana rozdzielczość/jakość nie jest obsługiwana przez drukarkę użytkownika.
 noprinter=Brak dostępnych drukarek.
 PrintToFile=Drukuj do pliku
