Aviary.pl bug - Reordering in confirmFileReplacing; r=marcoos

--- a/pl/toolkit/chrome/global/filepicker.properties
+++ b/pl/toolkit/chrome/global/filepicker.properties
@@ -14,7 +14,7 @@ appsTitle=Aplikacje
 dirTextInputLabel=Nazwa katalogu:
 dirTextInputAccesskey=N
 confirmTitle=Potwierdź
-confirmFileReplacing=Plik %S już istnieje. Czy zastąpić go?
+confirmFileReplacing=Plik %S już istnieje. Czy go zastąpić?
 openButtonLabel=Otwórz
 saveButtonLabel=Zapisz
 selectFolderButtonLabel=Wybierz
