--- a/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -282,7 +282,7 @@ subjectDlogMessage=U této zprávy nebyl zadán žádný předmět. Pokud jej ch
 recipientDlogMessage=Tento účet podporuje pouze e-mail. Při pokračování budou ignorovány diskusní skupiny.
 
 #String used by the alert that tells the user an e-mail address is invalid
-addressInvalid=%1$S není platná e-mailová adresa neboť není ve formátu uživatel@server. Před odesláním e-mailu ji musíte opravit.
+addressInvalid=%1$S není platná e-mailová adresa, protože není ve formátu uživatel@server. Před odesláním e-mailu ji musíte opravit.
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Zadejte prosím cestu pro přílohu
 attachPageDlogMessage=Webová stránka (URL):
