Aviary.pl bug 2205 - Different translation for "replacing"

--- a/pl/toolkit/chrome/global/xpinstall/xpinstall.properties
+++ b/pl/toolkit/chrome/global/xpinstall/xpinstall.properties
@@ -27,7 +27,7 @@
 
 InstallFile=Instalowanie: %s
 InstallSharedFile=Instalowanie współdzielonego pliku: %s
-ReplaceFile=Zamienianie: %s
+ReplaceFile=Zamiana: %s
 ReplaceSharedFile=Zamiana współdzielonego pliku: %s
 SkipFile=Pomijanie: %s
 SkipSharedFile=Pomijanie współdzielonego pliku: %s
