Aviary.pl bug 2382 - Change securityNoOwner; r=marcoos

--- a/pl/browser/chrome/browser/pageInfo.properties
+++ b/pl/browser/chrome/browser/pageInfo.properties
@@ -76,7 +76,7 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityNoOwner=Ta witryna nie dostarcza informacji na temat swych właścicieli.
+securityNoOwner=Ta witryna nie dostarcza informacji o swoich właścicielach.
 
 securityOneVisit=Tak, raz
 securityNVisits=Tak, %S razy
