Bug 448288 - include messages in collapse threads when applying command to top level message.

--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -481,6 +481,11 @@ headerFieldYou=Vous-même
 # The what's new tab title, shown on version update
 whatsNew=Quoi de neuf ?
 
+applyToCollapsedMsgsTitle=Confirmer la suppression des messages dans les fils de discussion réduits
+applyToCollapsedMsgs=Attention - cette action supprimera les messages des fils de discussion réduits
+applyToCollapsedAlwaysAskCheckbox=Toujours demander avant de supprimer les messages des fils de discussion réduits
+applyNowButton=Appliquer
+
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
 # specific result is present in the search.  Because of how the message grouping
